# prussian-embeddings

./: .gitignore  README.md  pyproject.toml
prussian_embeddings/: __init__.py  backends.py  build_chunks.py  chunk_rerank.py  client.py  config.py  evaluate.py  generate.py  hybrid.py  passages.py  ref_eval.py  search_cli.py  store.py  vocabulary.py
tests/: test_build_chunks.py  test_chunk_rerank.py  test_client.py  test_client_provider.py  test_evaluate.py  test_hybrid.py  test_passages.py  test_query_quality.py  test_ref_eval.py  test_sentence_transformers.py  test_store.py  test_vocabulary.py
