[project]
name = "prussian-embeddings"
version = "0.1.0"
description = "Embeddings for Prussian dictionary: backends, store, and generation CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
local = ["fastembed>=0.4"]
model2vec = ["model2vec>=0.3.0"]
dev = ["pytest>=8"]

[project.scripts]
prussian-embeddings-generate = "prussian_embeddings.generate:main"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prussian_embeddings"]
