[project]
name = "prussian-embeddings"
version = "0.1.0"
description = "Embeddings for Prussian dictionary: backends, store, and generation CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
local = ["fastembed>=0.4"]
model2vec = ["model2vec>=0.3.0"]
distill = ["model2vec[distill]", "torch>=2.9.0", "triton-xpu"]
dev = ["pytest>=8"]

[project.scripts]
prussian-embeddings-generate = "prussian_embeddings.generate:main"
prussian-embeddings-eval = "prussian_embeddings.evaluate:main"
prussian-embeddings-distill = "prussian_embeddings.distill:main"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prussian_embeddings"]

[dependency-groups]
dev = [
    "model2vec[distill]>=0.8.2",
    "pytest>=9.1.1",
]

# torch nur als XPU-Build (Intel-GPU) beziehen, nie die CUDA-Default-Wheels
[tool.uv.sources]
torch = [{ index = "pytorch-xpu" }]
triton-xpu = [{ index = "pytorch-xpu" }]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true
